setup proper run_list for kitchen

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,5 +15,5 @@ platforms:
 
 suites:
 - name: default
-  run_list: ['recipe[kvm-demo]']
+  run_list: ["recipe[apt]", "recipe[kvm-demo]"]
   attributes: {}
